{
    "name": "ToolInputActions",
    "maps": [
        {
            "name": "GamepadMap",
            "id": "7f3e14c0-b96b-4e95-85cd-8a27c4a7aeeb",
            "actions": [
                {
                    "name": "YawPitchRotation",
                    "type": "Value",
                    "id": "f96a7d97-f0b7-4bec-9a59-5f291b47205e",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "XZMovement",
                    "type": "Value",
                    "id": "fe94bdff-b1d3-4b3b-9a05-39d6a64c02ef",
                    "expectedControlType": "Analog",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "YMovement",
                    "type": "Value",
                    "id": "2d5ff221-5245-4877-a5e6-4c3fff09375b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ToolRotationPower",
                    "type": "Value",
                    "id": "19ea8bf3-0169-4340-817e-8218117770fa",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CycleAeratorForward",
                    "type": "Button",
                    "id": "2e39fb7f-4118-400f-95c2-d9cc5e5860d9",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CycleAeratorBackward",
                    "type": "Button",
                    "id": "a6cbd57c-3de3-4b26-8617-974dfa3c1179",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0c9a0f75-96e3-469a-abf6-cd4b6b007c32",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XZMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be7fbfa8-5df1-4676-81fd-27790500e702",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YawPitchRotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "eb27bc62-8d09-4e70-8930-79e2fa1e006b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9fca9ba3-041e-4cb7-9331-753f8ec27e58",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "4a94937f-0ca7-437d-acfd-5eca5dda0470",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d29d527d-3599-4871-965e-f5386a509b9c",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b71eac27-bfba-46b2-9910-e6429ebc5add",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f142028c-1834-4623-85ad-43c0a160fe89",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToolRotationPower",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5ca71d1-0a4c-4ae4-a424-46c496a1df2a",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleAeratorForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f2747bd-9e83-4cca-b20c-73610bc0bebc",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CycleAeratorBackward",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}